--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -546,3 +546,149 @@ h1.page-title,h2.subtitle{
   75%     { background-position: 255px 0; }
   100%    { background-position: 340px 0; }
 }
+
+// ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------FOOTER------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------/////////
+
+footer h5{
+  color: #1ABB9C;
+  // font-family: "proxima-nova",sans-serif;
+  font-style: normal; 
+  font-weight: 700;
+  font-size: 18px;
+}
+footer p{
+  color: #fff;
+  // font-family: "proxima-nova",sans-serif;
+  font-size: 15px;
+}
+form#newsletter input[name="newsletter"]{
+  background-color: #fff;
+  border: solid #999 1px;
+  height: 3.5em;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  width: 205px;
+}
+form#newsletter input[name="newsletter"]:focus,form#newsletter input[name="newsletter"]:active{
+  background: #fafafa;
+  border-color: #999999;
+  outline: none;
+  -webkit-box-shadow: 0 0 5px #999999;
+  -moz-box-shadow: 0 0 5px #999999;
+  box-shadow: 0 0 5px #999999;
+}
+form#newsletter input[name="submit"]{
+  background-color: rgba(237,110,100,0);
+  border: solid #1abc9c 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: none;
+  height: 3.5em;
+  width: 136px;
+  color: #1abc9c;
+  -webkit-appearance: none;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  font-weight: bold;
+}
+#getstarted, #search-submit {
+  background-color: rgba(237,110,100,0);
+  border: solid #1abc9c 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: none;
+  color: #1abc9c;
+  -webkit-appearance: none;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+#getstarted,#search-submit {
+  width: 10em;
+}
+#search-submit{
+  margin-left: 10px;
+}
+.prefix.button {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
+  line-height: 2.125rem;
+  border: none;
+  overflow: hidden;
+  display: block;
+  padding: 10px;
+  text-transform: uppercase;
+}
+.float-right{
+  float: right;
+}
+.float-left{
+  float: left;
+}
+.lower-footer .float-right p{
+  text-align: right;
+  margin: 10px 0;
+}
+.lower-footer{
+  background-color: #2e2f3c;
+}
+div.lower-footer p,div.lower-footer h5{
+  padding: 10px 0;
+  font-size: 14px;
+  line-height: 1.6;
+  text-rendering: optimizeLegibility;
+  font-weight: normal;
+  font-family: 'raleway';
+  color: white;
+}
+.transition-properties{
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+div.lower-footer p a{
+  color: #1ABB9C;
+  text-decoration: none;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+div.lower-footer p a:hover{
+  color: white;
+}
+.proxlight {
+  font-family: "proxima-nova",sans-serif;
+  font-style: normal;
+  font-weight: 100;
+}
+footer div.upper-footer{
+  background-color: #252531;
+  padding: 5em 0 4em 0;
+}
+.prox {
+  font-family: "proxima-nova",sans-serif;
+  font-style: normal;
+  font-weight: 700 !important;
+}
+#getstarted:hover,form#newsletter input[name="submit"]:hover{
+  text-decoration: none;
+  color: white;
+  border-color:white;
+}
+
+// -----------------------------------------------------------------------------------------------------
