--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -21,10 +21,14 @@
   margin: 120px 0;
   h3{
     font-weight: bold;
+    font-size: 18px;
+    line-height: 1.25;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   p{
     font-size: 18px;
     line-height: 1.25;
+    margin: 0 0 10px;
   }
 }
 .element-box{
@@ -32,8 +36,8 @@
   border-radius: 100%;
   overflow: hidden;
   float: left;
-  width: 300px;
-  height: 300px;
+  width: 360px; 
+  height: 360px;
   position: relative;
   margin: 20px 50px;
 }
@@ -42,8 +46,8 @@
   position: relative;
   overflow: visible;
   float: left;
-  top: 126px;
-  left: 125px;
+  top: 152px;
+  left: 152px;
 }
 .light-rod{
   position: absolute;
@@ -271,7 +275,7 @@
   left: 39px;
   right: 0;
   margin: auto;
-  top: 23px;
+  top: 50px;
 }
 
 .box-bulb:hover .bulb-rays{
@@ -481,7 +485,7 @@ h1.page-title,h2.subtitle{
   width: 250px;
   height: 250px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 73px;
   background: url(../img/meteo.png) no-repeat;
   background-size: 2500px 200px;
   background-position: -2265px 0px;
