--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -7,7 +7,7 @@
 @animation-bottom-left : animationFramesBottomLeft @anime-properties;
 @animation-bottom-right : animationFramesBottomRight @anime-properties;
 @animation-left-left : animationFramesLeftLeft @anime-properties;
-@animation-right-right : animationFramesRightRight @anime-properties;
+@animation-right-right : animationFramesRighteRight @anime-properties;
 
 // light rod position
 @light-rod-top: 95px;
@@ -453,10 +453,7 @@ h1.page-title,h2.subtitle{
 
 
 
-.careersOpenings{ background:url("careersOpenings.png") top left no-repeat; margin-right: 26px;}
-.careersOpenings:last-child{
-  margin-right: 0;
-}
+.careersOpenings{ background:url("../img/animation-circles.png") top left no-repeat;}
 
 .design:hover{ width:273px; height:274px; background-position:-10px -10px; }
 .design{ width:273px; height:274px; background-position:-10px -294px; }
@@ -694,5 +691,16 @@ footer div.upper-footer{
   color: white;
   border-color:white;
 }
+
+
+.circle{ background:url("circle.png") top left no-repeat; }
+.hr:hover{ width:270px; height:270px; background-position:-10px -10px; }
+.hr{ width:270px; height:270px; background-position:-10px -791px; }
+.mr:hover{ width:270px; height:270px; background-position:-10px -1572px; }
+.mr{ width:270px; height:270px; background-position:-10px -2353px; }
+.ds:hover{ width:270px; height:270px; background-position:-10px -3134px; }
+.ds{ width:270px; height:270px; background-position:-10px -3915px; }
+.sw:hover{ width:270px; height:270px; background-position:-10px -4696px; }
+.sw{ width:270px; height:270px; background-position:-10px -5477px; }
 
 // -----------------------------------------------------------------------------------------------------
